[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttmlir-chisel"
version = "0.1.0"
description = "Chisel runtime callbacks and validators for TT-MLIR"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Tenstorrent", email = "info@tenstorrent.com" },
]
keywords = ["tt-mlir", "tenstorrent", "chisel", "runtime", "callbacks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch",
]

[project.urls]
Homepage = "https://docs.tenstorrent.com/tt-mlir/"
Repository = "https://github.com/tenstorrent/tt-mlir"
Issues = "https://github.com/tenstorrent/tt-mlir/issues"

[tool.setuptools]
packages = ["chisel"]
